# yttrium

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile.Common.toml  Makefile.toml  README.md  build.rs  rust_toolchain.toml
.github/workflows/: run_all.yml
YttriumUnity/: YttriumUnity.sln  package.json
YttriumUnity/Editor/: Unity.Yttrium.Editor.asmdef
YttriumUnity/Runtime/: Panel.cs  PanelManager.cs  Unity.Yttrium.asmdef
YttriumUnity/Tests/Editor/: Unity.Yttrium.Editor.Tests.asmdef
YttriumUnity/Tests/Runtime/: Unity.Yttrium.Tests.asmdef
YttriumUnity/YttriumUnity/: Yttrium.cs
cpp/include/: unity_cxx_wrapper.h  yttrium.h
cpp/include/gl/: context.h
cpp/lib/Unity/: IUnityRenderingExtensions.h
cpp/src/: unity_cxx_wrapper.cpp  yttrium.cpp
docs/yttrium/.obsidian/: app.json  community-plugins.json  workspace
docs/yttrium/.obsidian/plugins/recent-files-obsidian/: data.json
docs/yttrium/High-Level Design/: General Tasks.md  Low Level Tasks.md  Rust CI.md  Unity CI.md
docs/yttrium/Low Level/: Event Queue.md  Sync with Unity Event Loop.md
docs/yttrium/Misc/: Rust FFI.md
docs/yttrium/Yttrium/: Ownership Model.md
dotnet-ffi/: Cargo.toml  Makefile.toml
dotnet-ffi/src/: lib.rs
include/: yttrium.h
src/: lib.rs  yttrium.cpp
src/browser/: mod.rs
src/dotnet/: mod.rs
src/plugin/: mod.rs
src/runtime/: mod.rs  panel.rs  yttrium.rs
src/unity/: mod.rs  unity_interface.rs  unity_rendering_extensions.rs
unity-rs/: Cargo.toml  build.rs
unity-rs-derive/: Cargo.toml  Makefile.toml
unity-rs-derive/src/: lib.rs
unity-rs-sys/: Cargo.toml  Makefile.toml  build.rs
unity-rs-sys/ffi/cpp/include/cxx_shims/: IUnityEventQueue_shim.h  IUnityInterface_shim.h  IUnityRenderingExtensions_shim.h
unity-rs-sys/ffi/cpp/src/: IUnityEventQueue_shim.cpp  IUnityInterface_shim.cpp  IUnityRenderingExtensions_shim.cpp
unity-rs-sys/src/: interface.rs  lib.rs
unity-rs-sys/src/gfx/: api.rs  mod.rs  rendering_extensions.rs  texture_buffer.rs
unity-rs/ffi/cpp/include/: event_shim.h  unity_shim.h
unity-rs/ffi/cpp/include/Unity/: IUnityRenderingExtensions.h
unity-rs/ffi/cpp/src/: event_shim.cpp  unity_shim.cpp
unity-rs/src/: graphics.rs  interface.rs  lib.rs  mod.rs  rendering_extensions.rs
unity-rs/src/native/: graphics.rs  interface.rs  mod.rs  rendering_extensions.rs
wrapper/cpp/src/: cxx_wrapper.cpp
yttrium/: Cargo.toml  Makefile.toml
yttrium/src/: lib.rs
yttrium/src/runtime/: mod.rs  panel.rs  yttrium.rs
yttrium_sys/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
yttrium_sys/cxx/include/: unity_cxx_wrapper.h
yttrium_sys/cxx/src/: unity_cxx_wrapper.cpp
