[package]
name = "yttrium"
version = "0.1.0"
authors = ["Nicholas Burrell <nicholas.burrell@protonmail.com>"]
edition = "2018"

[lib]
name = "yttrium"
path = "src/lib.rs"

[[bin]]
name = "yttrium_standalone"
path = "src/main.rs"

[dependencies]
cxx = "1.0"
libc = "0.2"

num-traits = "0.2"
num-derive = "0.2"

env_logger = "*"
thiserror = "1.0"

generational-arena = "0.2"
threadbound = "0.1"

libservo = {path = "extern/servo/components/servo", features = ["layout-2013", "media-gstreamer"]}

glutin = "0.25"
surfman = { version = "0.3", features = ["sm-angle-default"]}
takeable-option = { version = "*", optional = true}
gleam = "0.12"

gl = "0.14"

mio = { git = "https://github.com/servo/mio.git", branch = "servo-mio-0.6.22" }

winit = { git = "https://github.com/rust-windowing/winit.git", rev = "4192d04a53202c199f94d1b7d883a34c9ad09272" }

[patch."https://github.com/jrmuizel/raqote"]
raqote = { git = "https://github.com/jdm/raqote", branch = "fkup" }

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
image = "0.23"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
sig = "1.0"

deno_core = "0.92"

[build-dependencies]
cxx-build = "1.0"