[workspace]
members = [
    "unity-rs",
    "unity-rs-derive",
    "dotnet-ffi",
    "yttrium"
]

# [alias]
# make = "mingw32-make"

[patch."https://github.com/jrmuizel/raqote"] 
raqote = { git = "https://github.com/jdm/raqote", branch = "fkup" } 

# https://github.com/servo/servo/issues/27515#issuecomment-671474054 
[patch."https://github.com/servo/webrender"] 
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" } 
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" } 
