[package]
name = "unity-rs-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
unity-rs-sys = {path = "../unity-rs-sys" }

syn = {version = "0.15", features = ["parsing", "full"] }
quote = "1.0"