[package]
name = "yttrium"
version = "0.1.0"
edition = "2018"

[dependencies]
unity-rs-sys = { path = "../unity-rs-sys" }

num-traits = "0.2"
num-derive = "0.2"

env_logger = "*"
thiserror = "1.0"

generational-arena = "0.2"
threadbound = "0.1"
poison = "0.1.0"

libservo = {git = "https://github.com/servo/servo", features = ["layout-2013", "media-gstreamer"], rev = "74f1eb199e67e82ff713f77f7803f02a25966628"}

glutin = "0.25"
surfman = { version = "0.3", features = ["sm-angle-default"]}
takeable-option = { version = "*", optional = true}
gleam = "0.12"

gl = "0.14"

mio = { git = "https://github.com/servo/mio.git", branch = "servo-mio-0.6.22" }

winit = { git = "https://github.com/rust-windowing/winit.git", rev = "4192d04a53202c199f94d1b7d883a34c9ad09272" }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
image = "0.23"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
sig = "1.0"

deno_core = "0.92"
