[package]
name = "yttrium_sys"
version = "0.1.0"
authors = ["Nicholas Burrell <nicholas.burrell@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]